--- a/2nd/1. Tensorflow Basic.ipynb
+++ b/2nd/1. Tensorflow Basic.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "학습기에 훈련 데이터를 공급하고, 모델을 만든 다음 검증 절차를 거쳐서 텐서플로 서빙 시스템에 배포한다. 모델을 런칭한 다음, 새로운 데이터가 생겨서 모델을 개선하기 위해 이 작업을 되풀이합니다. 새로운 데이터가 입수가될 때마다 새로운 버전의 모델이 만들어진다. 개발자들은 gPRC를 이용하는 텐서플로 서빙 시스템을 통해 프론트엔드 시스템과 통신한다.\n",
     "\n",
-    "<img src=\"./serving.png\">"
+    "<img src=\"./photo/serving.png\">"
    ]
   },
   {
@@ -41,6 +41,13 @@
     "구성<br/>\n",
     "1) Node: mathematical operations<br/>\n",
     "2) Edge: multidimensional data arrays(tensors) communicated between them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./photo/tensor.png\">"
    ]
   },
   {
@@ -103,7 +110,7 @@
     "먼저 그래프와 세션이라는 개념을 이해해야 텐서플로우의 프로그래밍 모델을 이해할 수 있다.\n",
     "위의 d=a*b+c 에서 d 역시 계산을 수행하는 것이 아니라 다음과 같이 a x b+c 그래프를 정의하는 것이다.<br/>\n",
     "\n",
-    "<img src=\"./graph.png\">"
+    "<img src=\"./photo/graph.png\">"
    ]
   },
   {
@@ -155,7 +162,7 @@
     "\n",
     "y=x*2를 정의하면 내부적으로 다음과 같은 그래프가 된다.\n",
     "\n",
-    "<img src=\"./graph2.png\">"
+    "<img src=\"./photo/graph2.png\">"
    ]
   },
   {
@@ -219,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./mechanism.png\">"
+    "<img src=\"./photo/mechanism.png\">"
    ]
   },
   {
@@ -297,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./graph3.png\">"
+    "<img src=\"./photo/graph3.png\">"
    ]
   },
   {
@@ -307,54 +314,135 @@
     "세션을 초기화 하는 순간 변수 W에 그 값이 지정되는데, 초기화를 하는 방법은 다음과 같이 변수들을 global_variables_initializer() 를 이용해서 초기화 한후, 초기화된 결과를 세션에 전달해 줘야 한다.\n",
     "\n",
     "\n",
-    "init = tf.global_variables_initializer()\n",
+    "init = tf.global_variables_initializer()<br/>\n",
     "sess.run(init)\n",
-    "\n",
     "\n",
     "그러면 초기화를 추가한 코드를 보자."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'tensorflow' has no attribute 'global_variables_initailizer'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m          Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-39022ed5098a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0msess\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0minit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglobal_variables_initailizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0msess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0minput_data\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'tensorflow' has no attribute 'global_variables_initailizer'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  2.   4.   6.   8.  10.]\n"
      ]
     }
    ],
    "source": [
+    "import tensorflow as tf\n",
+    "\n",
     "input_data = [1,2,3,4,5]\n",
     "x = tf.placeholder(dtype=tf.float32)\n",
     "W = tf.Variable([2], dtype=tf.float32)\n",
     "y = W * x\n",
     "\n",
     "sess = tf.Session()\n",
-    "init = tf.global_variables_initailizer()\n",
+    "init = tf.global_variables_initializer()\n",
     "sess.run(init)\n",
     "result = sess.run(y, feed_dict={x: input_data})\n",
-    "\n",
-    "result = sess.run(y, feed_dict = {x: input_data})\n",
     "\n",
     "print(result)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 2. Tensorflow 코딩 시 참고할 점"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1) placeholder 타입 지정 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 12.]\n",
+      " [ 18.]\n",
+      " [ 18.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "input_data = [[1,2,3],[4,2,3],[2,3,4]]\n",
+    "x = tf.placeholder(dtype=tf.float32, shape=[None, 3]) # n(row) = not known /  n(col) = 3\n",
+    "w = tf.Variable([[2],[2],[2]], dtype=tf.float32) # 3*1 matrix\n",
+    "y = tf.matmul(x,w)\n",
+    "\n",
+    "sess = tf.Session()\n",
+    "init = tf.global_variables_initializer()\n",
+    "sess.run(init)\n",
+    "result = sess.run(y, feed_dict={x: input_data})\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2) Broadcasting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "행렬을 연산에 맞게 늘려주는 개념\n",
+    "\n",
+    "<img src=\"./photo/broadcasting.png\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 16.]\n",
+      " [ 22.]\n",
+      " [ 22.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "input_data = [[1,2,3],[4,2,3],[2,3,4]]\n",
+    "x = tf.placeholder(dtype=tf.float32, shape=[None, 3]) # n(row) = not known /  n(col) = 3\n",
+    "w = tf.Variable([[2],[2],[2]], dtype=tf.float32) # 3*1 matrix\n",
+    "b = tf.constant([4], dtype=tf.float32) \n",
+    "y = tf.matmul(x,w) + b # broadcating into 3*1 matrix\n",
+    "\n",
+    "sess = tf.Session()\n",
+    "init = tf.global_variables_initializer()\n",
+    "sess.run(init)\n",
+    "result = sess.run(y, feed_dict={x: input_data})\n",
+    "\n",
+    "print(result)"
+   ]
   }
  ],
  "metadata": {
