2-3. Logistic Regression & Softmax Regression(1)

--- a/2nd/2. Linear Regression.ipynb
+++ b/2nd/2. Linear Regression.ipynb
@@ -53,7 +53,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#0. 데이터 생성\n",
@@ -948,7 +950,9 @@
   {
    "cell_type": "code",
    "execution_count": 390,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#3. Cost Function\n",
@@ -1103,7 +1107,9 @@
   {
    "cell_type": "code",
    "execution_count": 387,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline"
@@ -1687,7 +1693,9 @@
   {
    "cell_type": "code",
    "execution_count": 381,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = np.array(x_data)[np.newaxis].T"
@@ -1756,7 +1764,9 @@
   {
    "cell_type": "code",
    "execution_count": 395,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#1. 변수 설정\n",
@@ -1773,7 +1783,9 @@
   {
    "cell_type": "code",
    "execution_count": 396,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x_data = [[73., 80., 75.], [93., 88., 93.],\n",
@@ -1922,7 +1934,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4. 학습 이후 Prediction"
+    "### 4. 학습 이후 Prediction"
    ]
   },
   {
@@ -1946,7 +1958,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5. File 이 매우 클 때"
+    "### 5. File 이 매우 클 때"
    ]
   },
   {
@@ -1990,8 +2002,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "#### 참고) Ridge 및 Lasso 및 ElasticNet Regression<br/>\n",
+    "\n",
+    "<a href=\"https://brunch.co.kr/@itschloe1/11\">설명 링크</a><br/>\n",
+    "<a href=\"https://github.com/nfmcclure/tensorflow_cookbook/tree/master/03_Linear_Regression\">코드 링크</a>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
