--- a/2nd/4. Softmax Regression.ipynb
+++ b/2nd/4. Softmax Regression.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 90,
    "metadata": {
     "collapsed": true
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
        " array([101,   1,   7], dtype=int32)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
        "        3, 0, 0, 1, 0, 5, 0, 6, 1])]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 93,
    "metadata": {
     "collapsed": true
    },
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 94,
    "metadata": {
     "collapsed": true
    },
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 95,
    "metadata": {
     "collapsed": true
    },
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 96,
    "metadata": {
     "collapsed": true
    },
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 97,
    "metadata": {
     "collapsed": true
    },
@@ -667,24 +667,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2 2 6 2 2 2 2 1 6 2 2 2 6 2 2 2 2 2 6 6 2 3 2 3 2 2 2 2 2 2 2 2 2 2 6 2 2\n",
-      " 2 6 2 2 2 2 3 2 2 2 2 2 2 2 2 2 2 2 2 3 2 3 3 6 6 1 2 2 2 6 2 2 2 2 3 2 6\n",
-      " 6 6 1 2 2 2 2 2 6 3 2 2 1 3 2 2 3 2 6 2 2 1 1 2 2 2 3]\n",
+      "[6 6 1 6 6 6 6 1 1 6 6 6 1 4 4 6 6 6 4 6 6 6 6 6 6 6 6 6 6 5 6 6 5 6 1 6 6\n",
+      " 6 1 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 4 6 4 1 1 4 6 6 6 6 6 6 6 6 6 1\n",
+      " 5 6 4 4 6 6 1 1 1 6 6 6 4 6 6 6 6 6 4 6 6 6 6 6 6 1 6]\n",
       "[False False False False False False False False False False False False\n",
+      " False False False  True False False False False False False False False\n",
       " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False  True False\n",
+      " False False False False False  True False False False False False False\n",
       " False False False False False False False False False False False False\n",
-      " False False False False False False False False False False False False\n",
-      " False False False False False False False False False False False False\n",
-      " False False False False False False False False False False False False\n",
-      " False False False False False False False False  True False False False\n",
-      " False False False False False False False  True False False False  True\n",
+      "  True False False False False False False False False False False False\n",
+      " False  True False False False False False False False False False False\n",
       " False False False False False]\n"
      ]
     }
@@ -702,23 +702,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step:     0\tLoss: 4.395\tAcc: 19.80%\n",
-      "Step:   200\tLoss: 0.401\tAcc: 88.12%\n",
-      "Step:   400\tLoss: 0.230\tAcc: 95.05%\n",
-      "Step:   600\tLoss: 0.162\tAcc: 97.03%\n",
-      "Step:   800\tLoss: 0.126\tAcc: 97.03%\n",
-      "Step:  1000\tLoss: 0.103\tAcc: 99.01%\n",
-      "Step:  1200\tLoss: 0.088\tAcc: 100.00%\n",
-      "Step:  1400\tLoss: 0.076\tAcc: 100.00%\n",
-      "Step:  1600\tLoss: 0.067\tAcc: 100.00%\n",
-      "Step:  1800\tLoss: 0.060\tAcc: 100.00%\n",
+      "Step:     0\tLoss: 4.224\tAcc: 16.83%\n",
+      "Step:   200\tLoss: 0.348\tAcc: 92.08%\n",
+      "Step:   400\tLoss: 0.208\tAcc: 94.06%\n",
+      "Step:   600\tLoss: 0.149\tAcc: 97.03%\n",
+      "Step:   800\tLoss: 0.117\tAcc: 99.01%\n",
+      "Step:  1000\tLoss: 0.096\tAcc: 99.01%\n",
+      "Step:  1200\tLoss: 0.082\tAcc: 100.00%\n",
+      "Step:  1400\tLoss: 0.071\tAcc: 100.00%\n",
+      "Step:  1600\tLoss: 0.063\tAcc: 100.00%\n",
+      "Step:  1800\tLoss: 0.057\tAcc: 100.00%\n",
       "[True] Prediction: 0 True Y: 0\n",
       "[True] Prediction: 0 True Y: 0\n",
       "[True] Prediction: 3 True Y: 3\n",
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -964,6 +964,346 @@
    "source": [
     "print(y_data)\n",
     "print(y_data.flatten())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 3. 복습"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. 데이터 정리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xy = np.loadtxt('./data/data-04-zoo.csv', delimiter=',', dtype=np.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_data = xy[:,:-1]\n",
+    "y_data = xy[:,-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#클래스는 7가지 -> one_hot encoding으로 변경\n",
+    "y_data = y_data.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_one_hot = np.zeros((len(y_data), np.max(y_data) + 1))\n",
+    "y_one_hot[np.arange(len(y_data)), y_data] = 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "내가 정의해야 하는 입력 데이터는 x_data 와 y_data에 대한 Placeholder<br/>\n",
+    "내가 정의해야 하는 변수는 Softmax Regression의 Weight와 Bias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = tf.placeholder(dtype=tf.float32, shape=[None, 16])\n",
+    "Y = tf.placeholder(dtype=tf.float32, shape=[None, 7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "W = tf.Variable(tf.random_normal([16, 7]), dtype=tf.float32)\n",
+    "b = tf.Variable(tf.zeros([7]), dtype=tf.float32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. cost function 정의"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Softmax\n",
+    "pred = tf.nn.softmax(tf.matmul(X, W) + b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Minimize error using cross entropy\n",
+    "cost = tf.reduce_mean(-tf.reduce_sum(Y*tf.log(pred), reduction_indices=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. gradient descent 정의"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gradient Descent\n",
+    "optimizer = tf.train.GradientDescentOptimizer(learning_rate).minimize(cost)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4. 변수 초기화"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Initialize the variables (i.e. assign their default value)\n",
+    "init = tf.global_variables_initializer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4-1. 예측"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prediction \n",
+    "prediction = tf.argmax(pred, 1)\n",
+    "correct_prediction = tf.equal(prediction, tf.argmax(y_one_hot, 1))\n",
+    "accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. 학습"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0.158416 3.30159\n",
+      "200 1.0 0.0516882\n",
+      "400 1.0 0.0268815\n",
+      "600 1.0 0.0183329\n",
+      "800 1.0 0.0139747\n",
+      "1000 1.0 0.0113195\n",
+      "1200 1.0 0.00952683\n",
+      "1400 1.0 0.00823258\n",
+      "1600 1.0 0.00725301\n",
+      "1800 1.0 0.00648504\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 3 True Y: 3\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 3 True Y: 3\n",
+      "[True] Prediction: 3 True Y: 3\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 1 True Y: 1\n",
+      "[True] Prediction: 3 True Y: 3\n",
+      "[True] Prediction: 6 True Y: 6\n",
+      "[True] Prediction: 6 True Y: 6\n",
+      "[True] Prediction: 6 True Y: 6\n",
+      "[True] Prediction: 1 True Y: 1\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 3 True Y: 3\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 1 True Y: 1\n",
+      "[True] Prediction: 1 True Y: 1\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 1 True Y: 1\n",
+      "[True] Prediction: 5 True Y: 5\n",
+      "[True] Prediction: 4 True Y: 4\n",
+      "[True] Prediction: 4 True Y: 4\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 5 True Y: 5\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 1 True Y: 1\n",
+      "[True] Prediction: 3 True Y: 3\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 1 True Y: 1\n",
+      "[True] Prediction: 3 True Y: 3\n",
+      "[True] Prediction: 5 True Y: 5\n",
+      "[True] Prediction: 5 True Y: 5\n",
+      "[True] Prediction: 1 True Y: 1\n",
+      "[True] Prediction: 5 True Y: 5\n",
+      "[True] Prediction: 1 True Y: 1\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 6 True Y: 6\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 5 True Y: 5\n",
+      "[True] Prediction: 4 True Y: 4\n",
+      "[True] Prediction: 6 True Y: 6\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 1 True Y: 1\n",
+      "[True] Prediction: 1 True Y: 1\n",
+      "[True] Prediction: 1 True Y: 1\n",
+      "[True] Prediction: 1 True Y: 1\n",
+      "[True] Prediction: 3 True Y: 3\n",
+      "[True] Prediction: 3 True Y: 3\n",
+      "[True] Prediction: 2 True Y: 2\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 1 True Y: 1\n",
+      "[True] Prediction: 6 True Y: 6\n",
+      "[True] Prediction: 3 True Y: 3\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 2 True Y: 2\n",
+      "[True] Prediction: 6 True Y: 6\n",
+      "[True] Prediction: 1 True Y: 1\n",
+      "[True] Prediction: 1 True Y: 1\n",
+      "[True] Prediction: 2 True Y: 2\n",
+      "[True] Prediction: 6 True Y: 6\n",
+      "[True] Prediction: 3 True Y: 3\n",
+      "[True] Prediction: 1 True Y: 1\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 6 True Y: 6\n",
+      "[True] Prediction: 3 True Y: 3\n",
+      "[True] Prediction: 1 True Y: 1\n",
+      "[True] Prediction: 5 True Y: 5\n",
+      "[True] Prediction: 4 True Y: 4\n",
+      "[True] Prediction: 2 True Y: 2\n",
+      "[True] Prediction: 2 True Y: 2\n",
+      "[True] Prediction: 3 True Y: 3\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 1 True Y: 1\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 5 True Y: 5\n",
+      "[True] Prediction: 0 True Y: 0\n",
+      "[True] Prediction: 6 True Y: 6\n",
+      "[True] Prediction: 1 True Y: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    \n",
+    "    # 초기화\n",
+    "    sess.run(init)\n",
+    "    \n",
+    "    for step in range(2000):\n",
+    "        [icost, iaccuracy, ioptimizer] = sess.run([cost, accuracy, optimizer], feed_dict= {X: x_data, Y: y_one_hot})\n",
+    "        \n",
+    "        if step % 200 == 0:\n",
+    "            print(step, iaccuracy, icost)\n",
+    "            \n",
+    "        pred = sess.run(prediction, feed_dict={X: x_data})\n",
+    "    \n",
+    "    for p, y in zip(pred, y_data.flatten()):\n",
+    "        print(\"[{}] Prediction: {} True Y: {}\".format(p==int(y), p, int(y)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "learning_rate = 0.01"
    ]
   },
   {
